// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display all headers with locking and an extra class 1`] = `
<div
  className="grid-row grid-row--header "
>
  <div
    className="grid-item--header pink grid-header--fixed-left"
  >
    Section
  </div>
  <PartHeaders
    className="pink"
    showErrors={true}
  />
  <SupplierProductFieldHeaders
    className="pink"
    lockFirstColumn={false}
    showErrors={true}
  />
</div>
`;

exports[`should display just part headers when supplier products no requested 1`] = `
<div
  className="grid-row grid-row--header "
>
  <div
    className="grid-item--header  "
  >
    Section
  </div>
  <PartHeaders
    className=""
    showErrors={false}
  />
</div>
`;
